# trackhub-testing

./: .gitignore  Dockerfile  nextflow.config  pyproject.toml  trackhub.nf
